--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,7 @@
 # .envrc - environment file for ease of work in the repo
 
 
-FULL_BASH_SOURCE="$PWD/$BASH_SOURCE"
+[[ "${BASH_SOURCE:0:1}" == "/" ]] && FULL_BASH_SOURCE="$BASH_SOURCE" || FULL_BASH_SOURCE="$PWD/$BASH_SOURCE"
 
 # Use the latest bashmod module from the Git repo
 export BASH_MODULES_SCRIPT="${FULL_BASH_SOURCE%/*}/bash/functions/bashmod"
